Updated webpack build config

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server",
     "clean": "rimraf dist",
     "production": "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile --colors",
-    "lint": "eslint ./app/**/**.js",
+    "lint": "eslint ./src/**/**.js",
     "test": "jest",
     "test:watch": "jest --watch",
     "coverage": "jest --coverage",
@@ -21,11 +21,11 @@
       "<rootDir>/config/jest/shim.js"
     ],
     "collectCoverageFrom": [
-      "app/**/*.{js,jsx,ts,tsx}"
+      "src/**/*.{js,jsx,ts,tsx}"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/config/jest/assetsTransformer.js",
-      "\\.(css|less)$": "<rootDir>/config/jest/assetsTransformer.js"
+      "\\.(scss|css|less)$": "<rootDir>/config/jest/assetsTransformer.js"
     },
     "testMatch": [
       "**/?(*.)(spec|test).js?(x)"
