--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,9 @@
   ],
 
   "plugins": [
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "transform-object-rest-spread",
+    "transform-decorators-legacy",
+    "transform-class-properties"
   ]
 }
