--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
     "linebreak-style": "off",
     "global-require": "off",
     "semi": "warn",
-    "arrow-body-style": "off"
+    "arrow-body-style": "off",
+    "react/forbid-prop-types": "off",
   }
 }
