--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "babel-eslint": "8.2.3",
     "babel-jest": "23.0.1",
     "babel-loader": "7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
